fix: reposition navbar z-index

--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -13,7 +13,7 @@
 
     position: fixed;
     top: 0;
-    z-index: 3000;
+    z-index: $zindex-fixed;
 }
 
 .navbar-brand {
